--- a/config/database.yml
+++ b/config/database.yml
@@ -2,9 +2,9 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
-  host: <%= ENV['APP_DATABASE_HOST'] || 'db' %>
-  username: <%= ENV['APP_DATABASE_USER'] %>
-  password: <%= ENV['APP_DATABASE_PASSWORD'] %>
+  host: <%= ENV['DB_HOST'] || 'db' %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
 
 development:
   <<: *default
@@ -16,4 +16,5 @@ test:
 
 production:
   <<: *default
-  database: <%= ENV['APP_DATABASE_NAME'] %>
+  url: <%= ENV['DB_URL'] %>
+  database: <%= ENV['DB_NAME'] %>
