--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,7 @@ jobs:
         with:
           context: .
           file: Dockerfile.production
-          cache-from: type=registry,ref=${{ env.APP_IMAGE_NAME }}:cached
-          cache-to: type=inline
-          push: true
-          tags: ${{ env.APP_IMAGE_NAME }}:cached
+          push: false
 
       - name: Check
         run: docker-compose --file docker-compose.ci.yml up --abort-on-container-exit
